Update with some guards to avoid NPEs
git-svn-id: https://svn.apache.org/repos/asf/tuscany/sca-java-2.x/trunk@1182279 13f79535-47bb-0310-9956-ffa450edef68